--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
   </style>
 </head>
 <body>
-  <p>FANZA「イメクラ～赤いカバン～」販売ページへ向かいます<br>
-     自動で移動しない場合は <a id="link" href="https://www.dmm.co.jp/dc/doujin/-/detail/=/cid=d_618432/?utm_source=pixiv_F&utm_medium=text&utm_campaign=randoseru-F">こちらをクリック</a> してください。</p>
+  <p>FANZA「公園少女〜私たちとナニして遊ぶ？〜」販売ページへ向かいます<br>
+     自動で移動しない場合は <a id="link" href="https://www.dmm.co.jp/dc/doujin/-/detail/=/cid=d_576960/?utm_source=pixiv_F&utm_medium=text&utm_campaign=park1-F">こちらをクリック</a> してください。</p>
 
   <script>
     // リダイレクト先URL（UTMなしでも可）
-    const redirectURL = "https://www.dmm.co.jp/dc/doujin/-/detail/=/cid=d_618432/?utm_source=pixiv_F&utm_medium=text&utm_campaign=randoseru-F";
+    const redirectURL = "https://www.dmm.co.jp/dc/doujin/-/detail/=/cid=d_576960/?utm_source=pixiv_F&utm_medium=text&utm_campaign=park1-F";
 
     // 1秒後にリダイレクト
     setTimeout(() => {
